-- Base schema loaded when MySQL initializes the Senteur database volume.
CREATE DATABASE IF NOT EXISTS senteur
CHARACTER SET utf8mb4
COLLATE utf8mb4_unicode_ci;

USE senteur;

SET NAMES utf8mb4;
SET FOREIGN_KEY_CHECKS = 0;

-- ======================
-- SCHEMA
-- ======================

CREATE TABLE brands (
    id INT AUTO_INCREMENT PRIMARY KEY,
    name VARCHAR(100) UNIQUE NOT NULL
);

CREATE TABLE fragrance_types (
    id INT AUTO_INCREMENT PRIMARY KEY,
    name VARCHAR(50) UNIQUE NOT NULL
);

CREATE TABLE users (
    id INT AUTO_INCREMENT PRIMARY KEY,

    public_id CHAR(10) UNIQUE NOT NULL,

    role ENUM('admin', 'user') NOT NULL DEFAULT 'user',

    username VARCHAR(50) UNIQUE NOT NULL,
    email VARCHAR(255) UNIQUE NOT NULL,
    phone VARCHAR(20) NULL,
    password_hash TEXT NOT NULL,

    email_verified_at TIMESTAMP NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
);

CREATE TABLE products (
    id INT AUTO_INCREMENT PRIMARY KEY,

    brand_id INT NOT NULL,
    fragrance_type_id INT NULL,

    family_name VARCHAR(150) NULL,

    name VARCHAR(150) NOT NULL,
    concentration_label VARCHAR(100) NULL,
    slug VARCHAR(180) UNIQUE NOT NULL,
    description TEXT,
    gender ENUM('male', 'female', 'unisex') NOT NULL,

    deleted_at TIMESTAMP NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,

    FOREIGN KEY (brand_id) REFERENCES brands(id) ON DELETE RESTRICT,
    FOREIGN KEY (fragrance_type_id) REFERENCES fragrance_types(id),

    FULLTEXT INDEX idx_products_name_description (name, description)
);

CREATE TABLE product_variants (
    id INT AUTO_INCREMENT PRIMARY KEY,

    product_id INT NOT NULL,

    size_ml INT NOT NULL,
    price DECIMAL(10,2) NOT NULL CHECK (price >= 0),
    stock INT NOT NULL CHECK (stock >= 0),

    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,

    FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE CASCADE,

    UNIQUE (product_id, size_ml)
);

CREATE TABLE product_images (
    id INT AUTO_INCREMENT PRIMARY KEY,

    product_id INT NOT NULL,

    image_url VARCHAR(255) NOT NULL,
    position INT NOT NULL DEFAULT 0,

    FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE CASCADE,

    UNIQUE (product_id, position)
);

CREATE TABLE product_variant_images (
    id INT AUTO_INCREMENT PRIMARY KEY,

    product_variant_id INT NOT NULL,
    image_url VARCHAR(255) NOT NULL,
    position INT NOT NULL DEFAULT 0,

    FOREIGN KEY (product_variant_id) REFERENCES product_variants(id) ON DELETE CASCADE,

    UNIQUE (product_variant_id, position)
);

CREATE TABLE categories (
    id INT AUTO_INCREMENT PRIMARY KEY,
    name VARCHAR(100) UNIQUE NOT NULL CHECK (name <> '')
);

CREATE TABLE notes (
    id INT AUTO_INCREMENT PRIMARY KEY,
    name VARCHAR(100) UNIQUE NOT NULL CHECK (name <> ''),
    slug VARCHAR(100) UNIQUE NOT NULL CHECK (slug <> ''),
    image_url VARCHAR(255) NOT NULL
);

CREATE TABLE product_categories (
    product_id INT NOT NULL,
    category_id INT NOT NULL,

    PRIMARY KEY (product_id, category_id),

    FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE CASCADE,
    FOREIGN KEY (category_id) REFERENCES categories(id)
);

CREATE TABLE product_notes (
    product_id INT NOT NULL,
    note_id INT NOT NULL,
    note_type ENUM('general', 'top', 'heart', 'base') NOT NULL,

    PRIMARY KEY (product_id, note_id, note_type),

    FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE CASCADE,
    FOREIGN KEY (note_id) REFERENCES notes(id)
);

CREATE TABLE user_addresses (
    id INT AUTO_INCREMENT PRIMARY KEY,

    user_id INT NOT NULL,

    full_name VARCHAR(150) NOT NULL,
    address_line VARCHAR(255) NOT NULL,
    city VARCHAR(100) NOT NULL,
    postal_code VARCHAR(20) NOT NULL,
    country VARCHAR(100) NOT NULL,

    is_default BOOLEAN NOT NULL DEFAULT FALSE,

    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,

    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE
);

CREATE TABLE orders (
    id INT AUTO_INCREMENT PRIMARY KEY,

    public_id CHAR(10) UNIQUE NOT NULL,

    user_id INT NOT NULL,
    shipping_address_id INT NOT NULL,

    status ENUM('pending','processing','shipped','delivered','cancelled') NOT NULL DEFAULT 'pending',

    subtotal_amount DECIMAL(10,2) NOT NULL CHECK (subtotal_amount >= 0),
    shipping_cost DECIMAL(10,2) NOT NULL CHECK (shipping_cost >= 0),
    total_amount DECIMAL(10,2) NOT NULL CHECK (total_amount >= 0),

	paid_at TIMESTAMP NULL,
	shipped_at TIMESTAMP NULL,
	delivered_at TIMESTAMP NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,

    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE RESTRICT,
    FOREIGN KEY (shipping_address_id) REFERENCES user_addresses(id)
);

CREATE TABLE order_items (
    id INT AUTO_INCREMENT PRIMARY KEY,

    order_id INT NOT NULL,
    product_variant_id INT NOT NULL,

    product_name_snapshot VARCHAR(150) NOT NULL,
    brand_name_snapshot VARCHAR(100) NOT NULL,
    concentration_label_snapshot VARCHAR(100) NULL,
    image_url_snapshot VARCHAR(255) NULL,
    size_ml_snapshot INT NOT NULL,

    quantity INT NOT NULL CHECK (quantity > 0),
    price_at_purchase DECIMAL(10,2) NOT NULL CHECK (price_at_purchase >= 0),

    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,

    UNIQUE (order_id, product_variant_id),

    FOREIGN KEY (order_id) REFERENCES orders(id) ON DELETE CASCADE,
    FOREIGN KEY (product_variant_id) REFERENCES product_variants(id)
);

CREATE TABLE payments (
    id INT AUTO_INCREMENT PRIMARY KEY,

    order_id INT UNIQUE NOT NULL,

    provider VARCHAR(50) NOT NULL,
	provider_payload JSON NULL,
    status ENUM('pending','paid','failed') NOT NULL DEFAULT 'pending',

    amount DECIMAL(10,2) NOT NULL CHECK (amount >= 0),
    currency VARCHAR(10) NOT NULL DEFAULT 'EUR',

    stripe_session_id VARCHAR(255) UNIQUE NULL,
    transaction_id VARCHAR(255) UNIQUE,

    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    paid_at TIMESTAMP NULL,

    FOREIGN KEY (order_id) REFERENCES orders(id) ON DELETE CASCADE
);

CREATE TABLE reviews (
    id INT AUTO_INCREMENT PRIMARY KEY,

    user_id INT NOT NULL,
    product_id INT NOT NULL,

    rating INT NOT NULL CHECK (rating BETWEEN 1 AND 5),
    title VARCHAR(150) NULL,
    comment TEXT,

    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,

    UNIQUE (user_id, product_id),

    FOREIGN KEY (user_id) REFERENCES users(id),
    FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE CASCADE
);

CREATE TABLE carts (
    id INT AUTO_INCREMENT PRIMARY KEY,

    session_id VARCHAR(255) UNIQUE NULL,
    user_id INT UNIQUE NULL,

	expires_at TIMESTAMP NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,

    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE SET NULL
);

CREATE TABLE cart_items (
    cart_id INT NOT NULL,
    product_variant_id INT NOT NULL,

    quantity INT NOT NULL CHECK (quantity > 0),

    PRIMARY KEY (cart_id, product_variant_id),

    FOREIGN KEY (cart_id) REFERENCES carts(id) ON DELETE CASCADE,
    FOREIGN KEY (product_variant_id) REFERENCES product_variants(id) ON DELETE CASCADE
);

-- ======================
-- INDEXES
-- ======================

CREATE INDEX idx_products_gender ON products(gender);
CREATE INDEX idx_products_brand_gender ON products(brand_id, gender);
CREATE INDEX idx_products_fragrance_type ON products(fragrance_type_id);
CREATE INDEX idx_products_family_name ON products(family_name);

CREATE INDEX idx_variants_price ON product_variants(price);
CREATE INDEX idx_variants_stock ON product_variants(stock);
CREATE INDEX idx_variants_product_price ON product_variants(product_id, price);

CREATE INDEX idx_images_product_position ON product_images(product_id, position);

CREATE INDEX idx_variant_images_variant_position ON product_variant_images(product_variant_id, position);

CREATE INDEX idx_notes_name ON notes(name);

CREATE INDEX idx_product_categories_product ON product_categories(product_id);
CREATE INDEX idx_product_categories_category ON product_categories(category_id);

CREATE INDEX idx_product_notes_product ON product_notes(product_id);
CREATE INDEX idx_product_notes_note ON product_notes(note_id);

CREATE INDEX idx_orders_user_id ON orders(user_id);
CREATE INDEX idx_orders_status ON orders(status);
CREATE INDEX idx_orders_address_id ON orders(shipping_address_id);

CREATE INDEX idx_order_items_order_id ON order_items(order_id);

CREATE INDEX idx_payments_status ON payments(status);

CREATE INDEX idx_reviews_product_id ON reviews(product_id);

CREATE INDEX idx_cart_items_variant_id ON cart_items(product_variant_id);

-- ======================

SET FOREIGN_KEY_CHECKS = 1;
